Chatbot can respond to user input and updating README.md

--- a/gpt-v1.ipynb
+++ b/gpt-v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "ead68fbb-1bca-4a5b-955c-7f9e001cd79b",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "id": "a396fb17-a677-4654-a385-e68b4a35763f",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "2408d0fa-d012-4020-b4e3-6f908901fc9d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "id": "72716d87-a9ea-4ad8-9427-ab44354a5f23",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "id": "01f949b7-5b0c-4ad4-b4e2-0223828db47d",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "9ebeca4e-0a91-4e7b-bcf3-3a85c3cd9788",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "id": "75e70525-5ab6-4ebd-97ed-b57a3063da39",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "a4342c4a-0041-4bd4-a93a-0c10de8707b0",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "id": "716c0387-50d8-44ba-b2e1-493cc3eb0128",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "id": "8c7abebc-e793-4a16-a627-77cced2ebf79",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 11,
    "id": "6bda4ee9-d2eb-4e21-9756-64605c5d69f9",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "id": "3f31dab5-f6e6-4766-8a94-e5db86c4a92d",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 13,
    "id": "033882b6-39cc-40a1-b6a4-48a00017ff7c",
    "metadata": {},
    "outputs": [
@@ -347,23 +347,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0, train loss: 9.3338, val loss: 9.3298 \n",
-      "step: 100, train loss: 2.4231, val loss: 2.4504 \n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m----------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
-      "Cell \u001b[1;32mIn[147], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m xb, yb \u001b[38;5;241m=\u001b[39m get_batch(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# evaluate the loss\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m logits, loss \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m optimiser\u001b[38;5;241m.\u001b[39mzero_grad(set_to_none\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;66;03m# zero grad ensures that the previous gradient does not affect the current one\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# the gradients are set to none instead of zero as this occupies less space\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[146], line 36\u001b[0m, in \u001b[0;36mGPTLanguageModel.forward\u001b[1;34m(self, index, targets)\u001b[0m\n\u001b[0;32m     34\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mblocks(x)\u001b[38;5;66;03m# (B,T,C)\u001b[39;00m\n\u001b[0;32m     35\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mln_f(x) \u001b[38;5;66;03m# (B,T,C)\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlm_head\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# (B,T,vocab_size)\u001b[39;00m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m targets \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     39\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[1;32m~\\LLMProj\\cuda\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1736\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1734\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1735\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1736\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\LLMProj\\cuda\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1747\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1742\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1743\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1744\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1745\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1746\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1747\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1749\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1750\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "File \u001b[1;32m~\\LLMProj\\cuda\\Lib\\site-packages\\torch\\nn\\modules\\linear.py:125\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 125\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinear\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbias\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "step: 0, train loss: 9.2652, val loss: 9.2628 \n",
+      "step: 100, train loss: 2.3593, val loss: 2.4383 \n",
+      "step: 200, train loss: 2.3275, val loss: 2.3650 \n",
+      "step: 300, train loss: 2.2037, val loss: 2.2051 \n",
+      "step: 400, train loss: 2.0845, val loss: 2.0992 \n",
+      "step: 500, train loss: 2.0558, val loss: 1.9771 \n",
+      "step: 600, train loss: 2.0353, val loss: 1.9201 \n",
+      "step: 700, train loss: 1.8850, val loss: 1.8909 \n",
+      "step: 800, train loss: 1.8190, val loss: 1.7495 \n",
+      "step: 900, train loss: 1.8869, val loss: 1.8407 \n",
+      "step: 1000, train loss: 1.7766, val loss: 1.7771 \n",
+      "step: 1100, train loss: 1.7913, val loss: 1.7679 \n",
+      "step: 1200, train loss: 1.6987, val loss: 1.7480 \n",
+      "step: 1300, train loss: 1.7595, val loss: 1.7076 \n",
+      "step: 1400, train loss: 1.7713, val loss: 1.8583 \n",
+      "step: 1500, train loss: 1.6997, val loss: 1.7022 \n",
+      "step: 1600, train loss: 1.6426, val loss: 1.6416 \n",
+      "step: 1700, train loss: 1.6576, val loss: 1.6216 \n",
+      "step: 1800, train loss: 1.7046, val loss: 1.5994 \n",
+      "step: 1900, train loss: 1.5913, val loss: 1.6469 \n",
+      "step: 2000, train loss: 1.6338, val loss: 1.6081 \n",
+      "step: 2100, train loss: 1.6784, val loss: 1.5485 \n",
+      "step: 2200, train loss: 1.6555, val loss: 1.5986 \n",
+      "step: 2300, train loss: 1.5659, val loss: 1.5754 \n",
+      "step: 2400, train loss: 1.6396, val loss: 1.6878 \n",
+      "step: 2500, train loss: 1.5328, val loss: 1.6077 \n",
+      "step: 2600, train loss: 1.5796, val loss: 1.5083 \n",
+      "step: 2700, train loss: 1.5752, val loss: 1.5261 \n",
+      "step: 2800, train loss: 1.5676, val loss: 1.5749 \n",
+      "step: 2900, train loss: 1.5093, val loss: 1.5153 \n",
+      "step: 3000, train loss: 1.5331, val loss: 1.5261 \n",
+      "step: 3100, train loss: 1.4808, val loss: 1.5150 \n",
+      "step: 3200, train loss: 1.5189, val loss: 1.5884 \n",
+      "step: 3300, train loss: 1.5163, val loss: 1.4885 \n",
+      "step: 3400, train loss: 1.5040, val loss: 1.5241 \n",
+      "step: 3500, train loss: 1.4919, val loss: 1.5006 \n",
+      "step: 3600, train loss: 1.5013, val loss: 1.5164 \n",
+      "step: 3700, train loss: 1.4871, val loss: 1.4796 \n",
+      "step: 3800, train loss: 1.5172, val loss: 1.5442 \n",
+      "step: 3900, train loss: 1.4639, val loss: 1.4612 \n",
+      "step: 4000, train loss: 1.4865, val loss: 1.5088 \n",
+      "step: 4100, train loss: 1.4402, val loss: 1.4916 \n",
+      "step: 4200, train loss: 1.5337, val loss: 1.5178 \n",
+      "step: 4300, train loss: 1.4704, val loss: 1.4459 \n",
+      "step: 4400, train loss: 1.4566, val loss: 1.4369 \n",
+      "step: 4500, train loss: 1.4706, val loss: 1.4609 \n",
+      "step: 4600, train loss: 1.4729, val loss: 1.4615 \n",
+      "step: 4700, train loss: 1.4332, val loss: 1.4755 \n",
+      "step: 4800, train loss: 1.4517, val loss: 1.4653 \n",
+      "step: 4900, train loss: 1.4519, val loss: 1.4865 \n",
+      "1.57408607006073\n",
+      "model saved\n"
      ]
     }
    ],
@@ -397,10 +432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cc9ba87f-53a7-4cd5-a814-27e3a1d00706",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prompt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m context \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(encode(\u001b[43mprompt\u001b[49m), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mlong, device\u001b[38;5;241m=\u001b[39mdevice)\n\u001b[0;32m      2\u001b[0m generated_chars \u001b[38;5;241m=\u001b[39m decode(m\u001b[38;5;241m.\u001b[39mgenerate(context\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m), max_new_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(generated_chars)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prompt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "context = torch.tensor(encode(prompt), dtype=torch.long, device=device)\n",
     "generated_chars = decode(m.generate(context.unsqueeze(0), max_new_tokens=100)[0].tolist())\n",
